@@ -11782,6 +11782,10 @@ genPointerSet (iCode * ic, iCode * pi)
       genGenPointerSet (right, result, ic, pi);
       break;
 
+    case CPOINTER:
+      werror (W_CODEMEM_WRITE);
+      break;
+
     default:
       werror (E_INTERNAL_ERROR, __FILE__, __LINE__, "genPointerSet: illegal pointer type");
     }
