@@ -1,5 +1,14 @@
 2023-01-28 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCerr.c,
+	  src/SDCCerr.h,
+	  src/ds390/gen.c,
+	  src/mcs51/gen.c,
+	  support/regression/tests/bug-3023.c:
+	  Fix bug #3023.
+
+2023-01-28 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/SDCCast.c,
 	  src/SDCCerr.c,
 	  src/SDCCerr.h,
